--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -5,8 +5,34 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="World Cup"
+        Height="500" Width="800">
+    <Grid x:Name="MainGrid">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <Menu Grid.Row="0">
+            <MenuItem Header="Settings" Click="Settings_Click"/>
+        </Menu>
+
+        <StackPanel Grid.Row="1" Orientation="Vertical" Margin="10" HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <ComboBox x:Name="cbHomeTeam" Width="180"/>
+                <TextBlock Text="vs" Margin="10,0"/>
+                <ComboBox x:Name="cbAwayTeam" Width="180"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
+                <Button Content="Info" Margin="10,0" Padding="10,0" Click="ButtonInfoHomeTeam_Click"/>
+                <TextBlock x:Name="tbMatchResult" Text="X : X" FontWeight="Bold" Margin="10,0"/>
+                <Button Content="Info" Margin="10,0" Padding="10,0" Click="ButtonInfoAwayTeam_Click"/>
+            </StackPanel>
+        </StackPanel>
+
+        <Grid Grid.Row="2" Background="Transparent">
+            <Image Source="football-pitch.jpg" Stretch="Fill"/>
+        </Grid>
     </Grid>
 </Window>
