--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -21,9 +21,9 @@
 
         <StackPanel Grid.Row="1" Orientation="Vertical" Margin="10" HorizontalAlignment="Center">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <ComboBox x:Name="cbHomeTeam" Width="180"/>
+                <ComboBox x:Name="cbHomeTeam" Width="180" SelectionChanged="cbHomeTeam_SelectionChanged"/>
                 <TextBlock Text="vs" Margin="10,0"/>
-                <ComboBox x:Name="cbAwayTeam" Width="180"/>
+                <ComboBox x:Name="cbAwayTeam" Width="180" SelectionChanged="cbAwayTeam_SelectionChanged"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
                 <Button Content="Info" Margin="10,0" Padding="10,0" Click="ButtonInfoHomeTeam_Click"/>
