--- a/WpfApp/TeamDetailWindow.xaml
+++ b/WpfApp/TeamDetailWindow.xaml
@@ -1,13 +1,30 @@
 ﻿<Window x:Class="WpfApp.TeamDetailWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp"
-        mc:Ignorable="d"
         Title="Team Details" 
-        Height="400" Width="400">
-    <Grid>
-        
-    </Grid>
+        Height="300" Width="350"
+        WindowStartupLocation="CenterOwner"
+        AllowsTransparency="True"
+        WindowStyle="None"
+        Background="Transparent"
+        Loaded="Window_Loaded">
+    <Border CornerRadius="15" Background="White" Padding="20,20,20,0">
+        <Border.Effect>
+            <DropShadowEffect ShadowDepth="10" BlurRadius="10" Opacity="0.5"/>
+        </Border.Effect>
+        <StackPanel>
+            <TextBlock x:Name="tbTeamName" FontSize="20" FontWeight="Bold" Margin="0,0,0,10"/>
+            <TextBlock x:Name="tbFifaCode" FontSize="16" Margin="0,0,0,10"/>
+            <TextBlock x:Name="tbPlayed" Margin="0,0,0,5"/>
+            <TextBlock x:Name="tbWins" Margin="0,0,0,5"/>
+            <TextBlock x:Name="tbLosses" Margin="0,0,0,5"/>
+            <TextBlock x:Name="tbDraws" Margin="0,0,0,5"/>
+            <TextBlock x:Name="tbGoalsFor" Margin="0,0,0,5"/>
+            <TextBlock x:Name="tbGoalsAgainst" Margin="0,0,0,5"/>
+            <TextBlock x:Name="tbGoalDiff" Margin="0,0,0,5"/>
+            <Button Content="Close" HorizontalAlignment="Center" 
+                    Margin="0,20,0,0" Width="250" Background="Red" FontSize="15" 
+                    FontWeight="Bold" Foreground="White" Height="40" Click="Close_Click"/>
+        </StackPanel>
+    </Border>
 </Window>
