--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -27,7 +27,7 @@
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,5,0,0">
                 <Button Content="Info" Margin="10,0" Padding="10,0" Click="ButtonInfoHomeTeam_Click"/>
-                <TextBlock x:Name="tbMatchResult" Text="X : X" FontWeight="Bold" Margin="10,0"/>
+                <TextBlock x:Name="tbMatchResult" Text="X : X" FontSize="16" FontWeight="Bold" Margin="10,0"/>
                 <Button Content="Info" Margin="10,0" Padding="10,0" Click="ButtonInfoAwayTeam_Click"/>
             </StackPanel>
         </StackPanel>
