--- a/WpfApp/MainWindow.xaml
+++ b/WpfApp/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp"
+        xmlns:p="clr-namespace:Localization;assembly=Localization"
         mc:Ignorable="d"
         Title="World Cup"
         Height="600" Width="800"
@@ -16,7 +17,7 @@
         </Grid.RowDefinitions>
 
         <Menu Grid.Row="0">
-            <MenuItem Header="Settings" Click="Settings_Click"/>
+            <MenuItem Header="{x:Static p:Resource.Settings}" Click="Settings_Click"/>
         </Menu>
 
         <StackPanel Grid.Row="1" Orientation="Vertical" Margin="10" HorizontalAlignment="Center">
