--- a/WpfApp/PlayerUserControl.xaml
+++ b/WpfApp/PlayerUserControl.xaml
@@ -19,7 +19,7 @@
     <Border Background="White" BorderBrush="Black" BorderThickness="1">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
             <Grid Width="60" Height="60">
-                <Image x:Name="imgPlayer" Stretch="Fill" Source="/default-player.png"/>
+                <Image x:Name="imgPlayer" Stretch="Fill" Source="Images/default-player.png"/>
                 <TextBlock x:Name="tbNumber"
                 FontWeight="Bold"
                 FontSize="20"
