--- a/WpfApp/TeamDetailWindow.xaml
+++ b/WpfApp/TeamDetailWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="WpfApp.TeamDetailWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:p="clr-namespace:Localization;assembly=Localization"
         Title="Team Details" 
         Height="300" Width="350"
         WindowStartupLocation="CenterOwner"
@@ -31,7 +32,7 @@
             <TextBlock x:Name="tbGoalsFor" Margin="0,0,0,5"/>
             <TextBlock x:Name="tbGoalsAgainst" Margin="0,0,0,5"/>
             <TextBlock x:Name="tbGoalDiff" Margin="0,0,0,5"/>
-            <Button Content="Close" HorizontalAlignment="Center" 
+            <Button Content="{x:Static p:Resource.Close}" HorizontalAlignment="Center" 
                     Margin="0,20,0,0" Width="300" Background="Red" FontSize="15" 
                     FontWeight="Bold" Foreground="White" Height="40" Click="Close_Click"/>
         </StackPanel>
